Fixed issue with ModelObject and marked ui-navigation-content as overflow:hidden.

--- a/src/css/layouts.css
+++ b/src/css/layouts.css
@@ -61,6 +61,7 @@
 .ui-navigation-content
 {
   position: relative;
+  overflow: hidden;
   -webkit-box-flex: 1;
 }
 
